--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 1.2.6
 homepage: https://github.com/iamvivekkaushik/DatePickerTimelineFlutter
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.3.0"
 
 dependencies:
   flutter:
